management-api/overlays/cnv-prod/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: management-api-route53
spec:
    host: management.moc.thoth-station.ninja
    to:
        kind: Service
        name: management-api
    tls:
        caCertificate: ENC[AES256_GCM,data:PEg24k/uD30hEg2oTVSBuI2c2sC0qQ76goM1vmdYd7hUD7zz136Y0sltholCc3RIH7ZKylfJoTnbxDpFiP0FNSmUR/mzYmejTZlDCnOcm917T3DnIr4yJ8zlGz2s13y0uFvMQ6Ki65hEA2Bm6E7u9DUgQsrHTcxR2yQqRfaxTuPB8HXdS5h71ndufBIkDGLCuv4MW2ji7hocMIDKkPFbwDUEndn/p8RJ/miVH1Rb3370lNL8WBfLZXPDZrgAvnP1IbERCc40CM2+Q6MKQ52mUO6D+1g7qThUuqaPwmEkDBryZt+MtbRJ1rHRTgpu6qLdF2IO7s1dAIrpO80akFgej1pAxv4oqiSv3z8dD4/+WJog3vSgcVenhoOf1qBB1O5j0K4aZpNQL700PPgW3feAbArDPUdR7nc81e431+5nBor4i7SJoGcZOARqsO31uVsixLrrvBVEW [...]
        certificate: ENC[AES256_GCM,data:YIaJsbWoLUuF6aqd0JcbN6ZKxCshZIIGE7TajkNkLT0n/Iv7DMjXifA+1F35hp6KmC9q95oFgb2BOeXa8DBnQZziHbXLo1NvytpIhwgwcbTue7VMxzZxVlqg19v4s0OlGydO0fxV/vyjyaaaF/hH43dsNQzHnbbZfj2uJp7kvg8Q3q39+L+gf3xCJwhxlUzF6FH7TKLXjnplEwv6cEmsJIkfpyU+1AI+sw8ifCcjYWid5alavURJn1OOZosOq6I0Ny/YYUSm/7S5dtvhzSaoEC5c9u+AfM1aZidtbOn1nLNxEs5V8XTcvAmm9lKFI1bf8UIshU6qR5sP6VFukOFKiphdGfKAZufOSq6K0esK1jOSJB5kkDm5RIxtphy+wiIFOKDS3Wwen/ArhmCe4xXM/qkifvdh13oj6MUJktGWG3hxgwPGLXqjTG8lPmR57kEhdD9ZU7t1OY4 [...]
        key: ENC[AES256_GCM,data:x6gTcTwg38P7QP5ki9YrgYVknukOKs7S/12fa2NmsYhrcR9hm2iv0ZxjtUYvRUALkdpbbn/CcDRsBgRgQi9lCQgUjMjml1sqRHbg8BRRO+msAi31uGBhg0LWkQ44+Wzh1jm79HQoYDEPnIzx78yGaDfRkJXUGPfVZflfyJlf0vfiqfjXLCYJP0reKZKvD2RXYy8fv9VEkddiI6h1+e0aqUsVW5mbYzONx+qLg93d2atbiXT3jYQfqUvjYONN22Zas70N37AMhwQamztKSpTKqIRe0Dw4LPot0ZeLlSXIyWvtM9fPCU5h/cNDPUsrAmFLP1FZFMjzSAZl60u46ECuNW2z4b3yr7fAE5P26jzz1ypOQ9LsEciWgQ3/DHeJVJaQMNkSZRb+0iY/HsxA3D9O1hGxzAmr8ku2HW8jmvQSaLg81BxgDcCEEM3mZIyCYFRYHtAURMRMkElgtbvwBNV [...]
        termination: ENC[AES256_GCM,data:wgtOsw==,iv:aTGNukRI17jgfBQSUdgGgEc3fERxFVSF8VYmr9BylPk=,tag:fSCwIpwbUjMq1gbXxJ0uJw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2021-01-19T19:52:12Z'
    mac: ENC[AES256_GCM,data:jFYyB2rATXb1TPjvk4re2asluK51X4b7yEzXdm973rZpYSZGJ/kfd3ZdsamEIyV7+FXhF1iCrwMi5tisJo3w3W1nSU3YvcaBS0xrfwSoSpNMqp2cUIL/TZ2yZApxW6CLpEg1mleSqKBb5lwGXrZSYtsEL73Wt5PrpkIAIyA8w0A=,iv:oObeCP841xMf5CD7FNPhamI7XVDxNVmf63+iSR0GmYI=,tag:YoA+0fkFIZgfIE1agHd73g==,type:str]
    pgp:
    -   created_at: '2021-01-19T19:52:12Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYAQ/+OCWm6T7GRJ7WU1XSacLmw3KgD8pg+EQYQOPax5s5flkY
[...]
            =NbDj
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2021-01-19T19:52:12Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf+NDTTA3BOutcufj3aCJ7CBcag7w2Sq9ZI/XZDIgtw+S5t
[...]
            a3ymj3sqtb313poEjk2Phe/gpwOkWHeyKg/4tUU=
            =3w/A
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2021-01-19T19:52:12Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf9HpmKyEMG0GZpRHPS1Whxa6PT87N19BHMhyXr9vU+QndB
[...]
            oOr0nKp6BcIhiPKN62E1xLR2vZBLuaDTh2+KMtg=
            =JC0r
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
